; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_fujitsu-laptop.c_kblamps_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_fujitsu-laptop.c_kblamps_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.acpi_device = type { i32 }

@LED_FULL = common dso_local global i32 0, align 4
@FUNC_LEDS = common dso_local global i32 0, align 4
@KEYBOARD_LAMPS = common dso_local global i32 0, align 4
@FUNC_LED_ON = common dso_local global i32 0, align 4
@FUNC_LED_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.led_classdev*, i32)* @kblamps_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kblamps_set(%struct.led_classdev* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.led_classdev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.acpi_device*, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.led_classdev*, %struct.led_classdev** %4, align 8
  %8 = getelementptr inbounds %struct.led_classdev, %struct.led_classdev* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.acpi_device* @to_acpi_device(i32 %11)
  store %struct.acpi_device* %12, %struct.acpi_device** %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @LED_FULL, align 4
  %15 = icmp uge i32 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.acpi_device*, %struct.acpi_device** %6, align 8
  %18 = load i32, i32* @FUNC_LEDS, align 4
  %19 = load i32, i32* @KEYBOARD_LAMPS, align 4
  %20 = load i32, i32* @FUNC_LED_ON, align 4
  %21 = call i32 @call_fext_func(%struct.acpi_device* %17, i32 %18, i32 1, i32 %19, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %28

22:                                               ; preds = %2
  %23 = load %struct.acpi_device*, %struct.acpi_device** %6, align 8
  %24 = load i32, i32* @FUNC_LEDS, align 4
  %25 = load i32, i32* @KEYBOARD_LAMPS, align 4
  %26 = load i32, i32* @FUNC_LED_OFF, align 4
  %27 = call i32 @call_fext_func(%struct.acpi_device* %23, i32 %24, i32 1, i32 %25, i32 %26)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %22, %16
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.acpi_device* @to_acpi_device(i32) #1

declare dso_local i32 @call_fext_func(%struct.acpi_device*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
